# terralib-fork

./: .cproject  .project  ChangeLog  INSTALL  Makefile.am  README  configure.ac
examples/: Makefile  Makefile.am  README  configure.ac  examples.pro  examples.sln
examples/GDALDecoder/: main.cpp
examples/addGeomRepresentation/: .project  Makefile  addGeomRepresentation.cpp  addGeomRepresentation.dsp  addGeomRepresentation.dsw  addGeomRepresentation.pro  addGeomRepresentation.sln  addGeomRepresentation.vcproj
examples/base/: base.pro
examples/connectionPool/: connectionPool.sln  connectionPool.vcproj  main.cpp
examples/convertCoordinates/: .project  Makefile  convertCoordinates.cpp  convertCoordinates.dsp  convertCoordinates.dsw  convertCoordinates.pro  convertCoordinates.sln  convertCoordinates.vcproj
examples/copyLayer/: .project  Makefile  copyLayer.cpp  copyLayer.dsp  copyLayer.dsw  copyLayer.pro  copyLayer.sln  copyLayer.vcproj
examples/createCoverage/: createCoverage.cpp  createCoverage.pro  createCoverage.sln  createCoverage.vcproj
examples/createDatabase/: .project  Makefile  createDatabase.cpp  createDatabase.dsp  createDatabase.dsw  createDatabase.pro  createDatabase.sln  createDatabase.vcproj
examples/createLayer/: .project  Makefile  createLayer.cpp  createLayer.dsp  createLayer.dsw  createLayer.pro  createLayer.sln  createLayer.vcproj
examples/createProximityMatrix/: .project  Makefile  createProximityMatrix.cpp  createProximityMatrix.dsp  createProximityMatrix.dsw  createProximityMatrix.pro  createProximityMatrix.sln  createProximityMatrix.vcproj
examples/createSTElementSet/: .project  Makefile  createSTElementSet.cpp  createSTElementSet.dsp  createSTElementSet.dsw  createSTElementSet.pro  createSTElementSet.sln  createSTElementSet.vcproj
examples/createSTElementSetFromLayer/: .cdtproject  .project  Makefile  createSTElementSetFromLayer.cpp  createSTElementSetFromLayer.dsp  createSTElementSetFromLayer.dsw  createSTElementSetFromLayer.pro  createSTElementSetFromLayer.sln  createSTElementSetFromLayer.vcproj
examples/createSTElementSetFromShapeFile/: .project  Makefile  createSTElementSetFromShapeFile.cpp  createSTElementSetFromShapeFile.dsp  createSTElementSetFromShapeFile.dsw  createSTElementSetFromShapeFile.pro  createSTElementSetFromShapeFile.vcproj  createSTElementSetFromShapefile.sln
examples/createSTElementSetFromTheme/: .project  Makefile  createSTElementSetFromTheme.cpp  createSTElementSetFromTheme.dsp  createSTElementSetFromTheme.dsw  createSTElementSetFromTheme.pro  createSTElementSetFromTheme.sln  createSTElementSetFromTheme.vcproj
examples/createTIN/: .cvsignore  Makefile  createTIN.cpp  createTIN.pro  createTIN.sln  createTIN.vcproj
examples/createTable/: .project  Makefile  createTable.cpp  createTable.dsp  createTable.dsw  createTable.pro  createTable.sln  createTable.vcproj
examples/createTheme/: .project  Makefile  createTheme.cpp  createTheme.dsp  createTheme.dsw  createTheme.pro  createTheme.sln  createTheme.vcproj
examples/data/: BairroBH.MID  BairroBH.MIF  BairrosPoA.dbf  BairrosPoA.shp  BairrosPoA.shx  BairrosRecife.mid  BairrosRecife.mif  BairrosRecife2.csv  BrasiliaPol.dbf  BrasiliaPol.shp  BrasiliaPol.shx  Brasilia_RGB.tif  Cadastro_Escolas.geo  Cadastro_Escolas.tab  Distritos.mid  Distritos.mif  EstadosBrasil.dbf  Mapa_Distritos_SP.dbf  Mapa_Distritos_SP.shp  Mapa_Distritos_SP.shx  Mapa_Drenagem_SP.dbf  Mapa_Drenagem_SP.shp  Mapa_Drenagem_SP.shx  Mapa_Industrias_SP.dbf  Mapa_Industrias_SP.shp  Mapa_Industrias_SP.shx  OcorrenciasBH.csv  OcorrenciasPoA.dbf  OcorrenciasPoA.shp  OcorrenciasPoA.shx  SOCEC.dbf  elevation.raw  nat1.tif  nat2.tif  samples.spr  sp_589x703.raw
examples/databaseQuery/: .project  Makefile  databaseQuery.cpp  databaseQuery.dsp  databaseQuery.dsw  databaseQuery.pro  databaseQuery.sln  databaseQuery.vcproj
examples/databaseSQLQuery/: .project  Makefile  databaseSQLQuery.cpp  databaseSQLQuery.dsp  databaseSQLQuery.dsw  databaseSQLQuery.pro  databaseSQLQuery.sln  databaseSQLQuery.vcproj
examples/image_processing/: .cvsignore  Makefile  Makefile.am  README  configure.ac  image_processing.pro  image_processing.sln  run_all_tests_unix.sh
examples/importCSV/: .project  Makefile  importCSV.cpp  importCSV.dsp  importCSV.dsw  importCSV.pro  importCSV.sln  importCSV.vcproj
examples/importDBF/: .project  Makefile  importDBF.cpp  importDBF.dsp  importDBF.dsw  importDBF.pro  importDBF.sln  importDBF.vcproj
examples/importGeoTab/: .project  Makefile  importGeoTab.cpp  importGeoTab.dsp  importGeoTab.dsw  importGeoTab.pro  importGeoTab.sln  importGeoTab.vcproj
examples/importGridData/: .project  Makefile  importGridData.cpp  importGridData.dsp  importGridData.dsw  importGridData.pro  importGridData.sln  importGridData.vcproj
examples/importJPEG/: .project  Makefile  importJPEG.cpp  importJPEG.dsp  importJPEG.dsw  importJPEG.pro  importJPEG.sln  importJPEG.vcproj
examples/importMIDMIF/: .project  Makefile  importMIDMIF.cpp  importMIDMIF.dsp  importMIDMIF.dsw  importMIDMIF.pro  importMIDMIF.sln  importMIDMIF.vcproj
examples/importShape/: .project  Makefile  importShape.cpp  importShape.dsp  importShape.dsw  importShape.pro  importShape.sln  importShape.vcproj
examples/mosaicTIFFImages/: .project  Makefile  mosaicTIFFImages.cpp  mosaicTIFFImages.dsp  mosaicTIFFImages.dsw  mosaicTIFFImages.pro  mosaicTIFFImages.sln  mosaicTIFFImages.vcproj
examples/proxMatrixAndSpatialStatistics/: .project  Makefile  proxMatrixAndSpatialStatistics.cpp  proxMatrixAndSpatialStatistics.dsp  proxMatrixAndSpatialStatistics.dsw  proxMatrixAndSpatialStatistics.pro  proxMatrixAndSpatialStatistics.sln  proxMatrixAndSpatialStatistics.vcproj
examples/querierFromLayer/: .project  Makefile  querierFromLayer.cpp  querierFromLayer.dsp  querierFromLayer.dsw  querierFromLayer.pro  querierFromLayer.sln  querierFromLayer.vcproj
examples/querierFromTheme/: .project  Makefile  querierFromTheme.cpp  querierFromTheme.dsp  querierFromTheme.dsw  (+3 more)
src/: Makefile.am  configure.ac
tests/: AUTHORS  Makefile.am  configure.ac
(+2901 files in other folders)
